--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>window.location.href="http://jp-tyo-dvm-2.sakurafrp.com:44263";</script>
+<script>window.location.href="http://blog.bufanshikong.com:23838";</script>
